# SaliencyMap

./: .cproject  .gitignore  .project  Makefile  README.md  SaliencyMap.sln  kernel.h  main.cpp  salencyMap.h  utils.h
Cuda/: CMakeLists.txt  Makefile  SaliencyMap.sln
Cuda/Filter/: .cproject  .project  Constants.h  Filter.cpp  Filter.cu  Filter.h  Filter.vcxproj  Kernels.cu  Makefile  main.cpp
Cuda/SaliencyMap/: SaliencyMap.cpp  SaliencyMap.cu  SaliencyMap.h  kernel.cpp  kernel.h  main.cpp  utils.h
Cuda/tools/: SaliencyMap.sln
Cuda/tools/Filter/: Filter.vcxproj
Cuda/tools/SaliencyMap/: SaliencyMap.cpp  SaliencyMap.h  kernel.h
Filter/: Filter.cpp  Filter.h  Filter.vcxproj  Makefile  main.cpp  test.cpp
GaussianBlur/: GaussianBlur.cpp  GaussianBlur.vcxproj  Makefile  main.cpp
GausssianBlur/: GaussianBlur.cpp  GaussianBlur.h  GausssianBlur.vcxproj  main.cpp
OpenMP/: Makefile
OpenMP/Filter/: Filter.cpp
OpenMP/SaliencyMap/: SaliencyMap.cpp
SaliencyMap/: SaliencyMap.cpp  SaliencyMap.h  SaliencyMap.vcxproj  kernel.h  main.cpp  salencyMap.h  utils.h
